<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Firstapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_first_app_">My first App!!</string>
    <string name="value">enter a correct value</string>
    <string name="best">Best Case</string>
    <string name="avg">Average Case</string>
    <string name="worst">Worst Case</string>
    <string name="bubble">Bubble Sort</string>
    <string name="merge">Merge Sort</string>
</resources>
