<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" 
    android:background="@drawable/bg">

    <EditText
        android:id="@+id/etsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/value"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/rgcase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <RadioButton
            android:id="@+id/rbbest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:checked="true"
            android:text="@string/best" />

        <RadioButton
            android:id="@+id/rbavg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:checked="true"
            android:text="@string/avg" />

        <RadioButton
            android:id="@+id/rbworst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/worst" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="status will be displayed here..."
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btngen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="generate"
        android:text="Generate Array" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnbubble"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:onClick="sortIt"
            android:text="@string/bubble"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/tvbubble"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="....."
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnmerge"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:onClick="sortIt"
            android:text="@string/merge"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/tvmerge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="....."
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>